docs/api/qiskit/0.37/qiskit.primitives.BaseSampler.md
---
title: BaseSampler
description: API reference for qiskit.primitives.BaseSampler
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.primitives.BaseSampler
---

# BaseSampler

<span id="qiskit.primitives.BaseSampler" />

`BaseSampler(circuits: Iterable[QuantumCircuit] | QuantumCircuit, *args, parameters: Iterable[Iterable[Parameter]] | None = None, **kwargs)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.21/qiskit/primitives/base_sampler.py "view source code")

Bases: `abc.ABC`

Sampler base class

Base class of Sampler that calculates quasi-probabilities of bitstrings from quantum circuits.

**Parameters**

*   **circuits** – Quantum circuits to be executed.
*   **parameters** – Parameters of each of the quantum circuits. Defaults to `[circ.parameters for circ in circuits]`.

**Raises**

**QiskitError** – For mismatch of circuits and parameters list.

## Methods

### close

<span id="qiskit.primitives.BaseSampler.close" />

`abstract BaseSampler.close()` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.21/qiskit/primitives/base_sampler.py "view source code")

Close the session and free resources

## Attributes

<span id="qiskit.primitives.BaseSampler.circuits" />

### circuits

Quantum circuits to be sampled.

**Returns**

The quantum circuits to be sampled.

<span id="qiskit.primitives.BaseSampler.parameters" />

### parameters

Parameters of quantum circuits.

**Returns**

List of the parameters in each quantum circuit.

