docs/api/qiskit/0.39/qiskit.primitives.BaseSampler.md
---
title: BaseSampler
description: API reference for qiskit.primitives.BaseSampler
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.primitives.BaseSampler
---

# BaseSampler

<span id="qiskit.primitives.BaseSampler" />

`BaseSampler(circuits: Iterable[QuantumCircuit] | QuantumCircuit | None = None, parameters: Iterable[Iterable[Parameter]] | None = None, **kwargs)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.22/qiskit/primitives/base/base_sampler.py "view source code")

Bases: `qiskit.primitives.base.base_primitive.BasePrimitive`

Sampler base class

Base class of Sampler that calculates quasi-probabilities of bitstrings from quantum circuits.

**Parameters**

*   **circuits** – Quantum circuits to be executed.
*   **parameters** – Parameters of each of the quantum circuits. Defaults to `[circ.parameters for circ in circuits]`.
*   **options** – Default options.

**Raises**

**ValueError** – For mismatch of circuits and parameters list.

## Methods

### close

<span id="qiskit.primitives.BaseSampler.close" />

`BaseSampler.close()` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.22/qiskit/primitives/base/base_sampler.py "view source code")

Close the session and free resources

### run

<span id="qiskit.primitives.BaseSampler.run" />

`BaseSampler.run(circuits, parameter_values=None, **run_options)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.22/qiskit/primitives/base/base_sampler.py "view source code")

Run the job of the sampling of bitstrings.

**Parameters**

*   **circuits** – One of more circuit objects.
*   **parameter\_values** – Parameters to be bound to the circuit.
*   **run\_options** – Backend runtime options used for circuit execution.

**Returns**

The job object of the result of the sampler. The i-th result corresponds to `circuits[i]` evaluated with parameters bound as `parameter_values[i]`.

**Raises**

**ValueError** – Invalid arguments are given.

### set\_options

<span id="qiskit.primitives.BaseSampler.set_options" />

`BaseSampler.set_options(**fields)`

Set options values for the estimator.

**Parameters**

**\*\*fields** – The fields to update the options

## Attributes

<span id="qiskit.primitives.BaseSampler.circuits" />

### circuits

Quantum circuits to be sampled.

**Returns**

The quantum circuits to be sampled.

<span id="qiskit.primitives.BaseSampler.options" />

### options

Return options values for the estimator.

**Return type**

[`Options`](qiskit.providers.Options "qiskit.providers.options.Options")

**Returns**

options

<span id="qiskit.primitives.BaseSampler.parameters" />

### parameters

Parameters of quantum circuits.

**Returns**

List of the parameters in each quantum circuit.

